# AI

./: AI.tar  labirynt.clp  questions.clp  sprawko.docx  testy  zad1  zad1.clp  zad1_rules
InteligentnyDom/: InteligentnyDom.sln
InteligentnyDom/Debug/: InteligentnyDom.ilk
InteligentnyDom/InteligentnyDom/: ACStoveAgent.cpp  ACStoveAgent.h  Agent.cpp  Agent.h  Controller.cpp  Controller.h  Events.h  Font.cpp  Font.h  FontPrinting.cpp  FontPrinting.h  InteligentnyDom.vcxproj  InteligentnyDom.vcxproj.filters  Renderer.cpp  Renderer.h  ShutterAgent.cpp  ShutterAgent.h  Symulation.cpp  Symulation.h  WindowAgent.h  WindowAgnet.cpp  main.cpp
InteligentnyDom/InteligentnyDom/Debug/: vc120.idb
InteligentnyDom/lib/: glfw3.lib  glfw3d.lib
Jovolog/: README_PRZECZYTAJ_MNIE.txt  run.sh
Jovolog/players/: exit.pl  grab.pl  ja - Copy.pl  ja.pl  kyp.pl  kyp_debug.pl  moveForward.pl  player_template.pl  shoot.pl  simple_player1.pl  simple_player2.pl  simple_player3.pl  simple_player4.pl  simple_player5.pl  simple_player6.pl  simple_player7.pl  turnLeft.pl  turnRight.pl
Markow/: Markow.sln  Wyniki.tar
Markow/Debug/: Markow.ilk
Markow/Markow/: Board.h  Markow.vcxproj  Markow.vcxproj.filters  main.cpp  sprawko.docx  ~WRL3148.tmp
Markow/Markow/Debug/: vc120.idb
Markow/Markow/placki/: board.txt  config.txt  plot.gp  result.txt
Markow/Markow/zad1_004/: result.txt
Markow/Wyniki/: ~$prawko.docx
bayes/: Sprawko.docx  SprawozdanieBayes.txt  adult2.csv  bakap.xdsl  bakap2.xdsl  bakap3.xdsl  bpat.gpat  ja.xdsl
bayes/abalone/: abalone.csv  abalone.xdsl  abalone2.csv  abalone2.xdsl  abalone_ceny.xdsl
bayes/grzyby/: BreastTissue.xls  Table01 (1).xls  table01.xls
bayes/kyp/: adult.csv  bakap.xdsl
machine_learnig/: dane.csv  dane.xlsx  s2 - Copy.docx  s2.docx  sprawko.docx
machine_learnig/aa/: cmc.csv
machine_learnig/adults/: adult.csv
zad1/: gry.clp  sprawko.docx  zad1.clp
zad2/: Connect4.tar
zad2/Connect4/: .gitignore  CMakeLists.txt  Connect4.sln  deploy
zad2/Connect4/src/: Board.cpp  Board.h  Connect4.vcxproj  Connect4.vcxproj.filters  Controller.cpp  Controller.h  Heuristic.cpp  Heuristic.h  HeuristicAdv.cpp  HeuristicAdv.h  HeuristicSimple.cpp  HeuristicSimple.h  HeuristicWin.cpp  HeuristicWin.h  PerfectMove.cpp  PerfectMove.h  Player.h  Renderer.cpp  Renderer.h  Utils.h  main.cpp  save.txt
zad2/connect4_web/: connect4_web.sln
(+65 files in other folders)
